--- a/ProjectX/Cells/EditProfileTableViewCell.xib
+++ b/ProjectX/Cells/EditProfileTableViewCell.xib
@@ -12,37 +12,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="265" id="KGk-i7-Jjw" customClass="EditProfileTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="420" height="265"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="339" id="KGk-i7-Jjw" customClass="EditProfileTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="430" height="339"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="420" height="264.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="430" height="338.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfileFeed" translatesAutoresizingMaskIntoConstraints="NO" id="aGZ-rS-fFj">
-                        <rect key="frame" x="166" y="8" width="88" height="88"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aGZ-rS-fFj">
+                        <rect key="frame" x="167.5" y="8" width="95" height="95"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="88" id="Gmz-nC-qZG"/>
-                            <constraint firstAttribute="width" constant="88" id="Qtv-PO-aW8"/>
+                            <constraint firstAttribute="height" constant="95" id="Gmz-nC-qZG"/>
+                            <constraint firstAttribute="width" constant="95" id="Qtv-PO-aW8"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="EHq-rZ-wV6">
-                        <rect key="frame" x="28" y="104" width="364" height="142"/>
+                        <rect key="frame" x="28" y="111" width="374" height="209"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="center" contentHorizontalAlignment="fill" contentVerticalAlignment="bottom" text="Sheyl" borderStyle="roundedRect" placeholder="testing" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Af5-eB-SBv">
-                                <rect key="frame" x="0.0" y="0.0" width="364" height="36.5"/>
+                            <textField opaque="NO" contentMode="center" contentHorizontalAlignment="fill" contentVerticalAlignment="bottom" text="Sheyl" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Af5-eB-SBv" customClass="MFTextField">
+                                <rect key="frame" x="0.0" y="0.0" width="374" height="59"/>
                                 <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" textContentType="name"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L4n-YG-mTZ">
-                                <rect key="frame" x="0.0" y="52.5" width="364" height="37"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L4n-YG-mTZ" customClass="MFTextField">
+                                <rect key="frame" x="0.0" y="75" width="374" height="59"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="waM-nv-nhT">
-                                <rect key="frame" x="0.0" y="105.5" width="364" height="36.5"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bio" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="waM-nv-nhT" customClass="MFTextField">
+                                <rect key="frame" x="0.0" y="150" width="374" height="59"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -50,7 +50,6 @@
                         </subviews>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" red="1" green="0.4858917579" blue="0.83662007319999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="EHq-rZ-wV6" secondAttribute="trailing" constant="8" id="1n4-SC-chd"/>
                     <constraint firstAttribute="bottomMargin" secondItem="EHq-rZ-wV6" secondAttribute="bottom" constant="8" id="g0r-EW-ekq"/>
@@ -67,10 +66,7 @@
                 <outlet property="lastName" destination="L4n-YG-mTZ" id="anB-n3-d3P"/>
                 <outlet property="profileView" destination="aGZ-rS-fFj" id="DBM-6b-i9k"/>
             </connections>
-            <point key="canvasLocation" x="207.24637681159422" y="227.34375"/>
+            <point key="canvasLocation" x="236.23188405797103" y="225.33482142857142"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="ProfileFeed" width="246" height="218"/>
-    </resources>
 </document>
