--- a/ProjectX/Cells/InterestFieldTableViewCell.xib
+++ b/ProjectX/Cells/InterestFieldTableViewCell.xib
@@ -12,17 +12,16 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="54" id="KGk-i7-Jjw" customClass="InterestFieldTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="416" height="54"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="53" id="KGk-i7-Jjw" customClass="InterestFieldTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="416" height="53"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="416" height="53.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="416" height="52.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Interests" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pi8-6t-YO0" customClass="MFTextField">
-                        <rect key="frame" x="20" y="8" width="374" height="50"/>
+                        <rect key="frame" x="20" y="8" width="374" height="48"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="50" id="4TQ-4h-Ewl"/>
                             <constraint firstAttribute="width" constant="374" id="Act-QI-GRw"/>
                         </constraints>
                         <nil key="textColor"/>
@@ -40,7 +39,7 @@
             <connections>
                 <outlet property="addInterestsField" destination="Pi8-6t-YO0" id="2MB-4k-zJh"/>
             </connections>
-            <point key="canvasLocation" x="117.39130434782609" y="14.0625"/>
+            <point key="canvasLocation" x="117.39130434782609" y="13.727678571428571"/>
         </tableViewCell>
     </objects>
 </document>
