--- a/ProjectX/Cells/ShowInterestsTableViewCell.xib
+++ b/ProjectX/Cells/ShowInterestsTableViewCell.xib
@@ -20,10 +20,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="5J0-Ca-8Ck">
-                        <rect key="frame" x="0.0" y="8" width="703" height="279.5"/>
+                        <rect key="frame" x="0.0" y="8" width="703" height="100"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" priority="100" constant="100" id="wGO-yr-pvm"/>
+                            <constraint firstAttribute="height" constant="100" id="wGO-yr-pvm"/>
                         </constraints>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gDf-ZI-vlg">
                             <size key="itemSize" width="50" height="50"/>
@@ -39,7 +39,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="5J0-Ca-8Ck" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OFo-Tu-UA4"/>
-                    <constraint firstAttribute="bottom" secondItem="5J0-Ca-8Ck" secondAttribute="bottom" id="Oqa-oH-8Da"/>
+                    <constraint firstAttribute="bottom" secondItem="5J0-Ca-8Ck" secondAttribute="bottom" priority="750" id="Oqa-oH-8Da"/>
                     <constraint firstAttribute="trailing" secondItem="5J0-Ca-8Ck" secondAttribute="trailing" id="VIi-IW-CuG"/>
                     <constraint firstItem="5J0-Ca-8Ck" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="h1s-EF-TlK"/>
                 </constraints>
