--- a/ProjectX/Cells/EditProfileTableViewCell.xib
+++ b/ProjectX/Cells/EditProfileTableViewCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="379" id="KGk-i7-Jjw" customClass="EditProfileTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="430" height="379"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="394" id="KGk-i7-Jjw" customClass="EditProfileTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="430" height="394"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="430" height="378.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="430" height="393.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aGZ-rS-fFj">
@@ -27,22 +27,22 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="EHq-rZ-wV6">
-                        <rect key="frame" x="28" y="138" width="374" height="222"/>
+                        <rect key="frame" x="28" y="164.5" width="374" height="176.5"/>
                         <subviews>
                             <textField opaque="NO" contentMode="center" contentHorizontalAlignment="fill" contentVerticalAlignment="bottom" text="Sheyl" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Af5-eB-SBv" customClass="MFTextField">
-                                <rect key="frame" x="0.0" y="0.0" width="374" height="63.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="374" height="48"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" textContentType="name"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L4n-YG-mTZ" customClass="MFTextField">
-                                <rect key="frame" x="0.0" y="79.5" width="374" height="63"/>
+                                <rect key="frame" x="0.0" y="64" width="374" height="48.5"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bio" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="waM-nv-nhT" customClass="MFTextField">
-                                <rect key="frame" x="0.0" y="158.5" width="374" height="63.5"/>
+                                <rect key="frame" x="0.0" y="128.5" width="374" height="48"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -62,7 +62,7 @@
                     <constraint firstAttribute="trailingMargin" secondItem="EHq-rZ-wV6" secondAttribute="trailing" constant="8" id="1n4-SC-chd"/>
                     <constraint firstItem="ZdW-Kg-Rep" firstAttribute="top" secondItem="aGZ-rS-fFj" secondAttribute="bottom" constant="3" id="EY8-6F-Dah"/>
                     <constraint firstItem="ZdW-Kg-Rep" firstAttribute="centerX" secondItem="aGZ-rS-fFj" secondAttribute="centerX" id="d7f-4o-XiX"/>
-                    <constraint firstItem="EHq-rZ-wV6" firstAttribute="top" secondItem="ZdW-Kg-Rep" secondAttribute="bottom" constant="8" id="eFR-3B-TMs"/>
+                    <constraint firstItem="EHq-rZ-wV6" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ZdW-Kg-Rep" secondAttribute="bottom" constant="10" id="eFR-3B-TMs"/>
                     <constraint firstAttribute="bottomMargin" secondItem="EHq-rZ-wV6" secondAttribute="bottom" constant="8" id="g0r-EW-ekq"/>
                     <constraint firstItem="aGZ-rS-fFj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="i1G-c1-Bc8"/>
                     <constraint firstItem="EHq-rZ-wV6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="q8V-E8-T0J"/>
@@ -77,7 +77,7 @@
                 <outlet property="lastName" destination="L4n-YG-mTZ" id="anB-n3-d3P"/>
                 <outlet property="profileView" destination="aGZ-rS-fFj" id="DBM-6b-i9k"/>
             </connections>
-            <point key="canvasLocation" x="146" y="205"/>
+            <point key="canvasLocation" x="144.92753623188406" y="199.55357142857142"/>
         </tableViewCell>
     </objects>
 </document>
